--- a/Makefile.common
+++ b/Makefile.common
@@ -193,8 +193,7 @@ SOURCES_C += $(LIBRETRO_DIR)/libretro.c \
 	$(LIBRETRO_COMM_DIR)/vfs/vfs_implementation.c \
 	$(LIBRETRO_COMM_DIR)/streams/file_stream.c \
 	$(LIBRETRO_COMM_DIR)/compat/fopen_utf8.c \
-	$(ROOT_DIR)/custom/mupen64plus-core/api/vidext_libretro.c \
-	$(LIBRETRO_COMM_DIR)/glsm/glsm.c
+	$(ROOT_DIR)/custom/mupen64plus-core/api/vidext_libretro.c
 
 	
 SOURCES_CXX   += \
@@ -293,7 +292,9 @@ SOURCES_CXX   += \
 	$(VIDEODIR_GLIDEN64)/src/MupenPlusPluginAPI.cpp \
 	$(VIDEODIR_GLIDEN64)/src/mupenplus/MupenPlusAPIImpl.cpp \
 	$(ROOT_DIR)/custom/GLideN64/mupenplus/Config_mupenplus.cpp \
-	$(ROOT_DIR)/custom/GLideN64/mupenplus/CommonAPIImpl_mupenplus.cpp
+	$(ROOT_DIR)/custom/GLideN64/mupenplus/CommonAPIImpl_mupenplus.cpp \
+	$(ROOT_DIR)/custom/glsm/glsm.cpp
+	
 ifneq (,$(findstring android,$(platform)))
 	SOURCES_CXX += $(VIDEODIR_GLIDEN64)/src/GLideNHQ/txWidestringWrapper.cpp \
 		$(VIDEODIR_GLIDEN64)/src/Log_android.cpp
